--- a/BNR-iOS-2012/01-Quiz/Quiz/Quiz-Info.plist
+++ b/BNR-iOS-2012/01-Quiz/Quiz/Quiz-Info.plist
@@ -16,6 +16,8 @@
 			<array>
 				<string>Icon@2x.png</string>
 				<string>Icon.png</string>
+				<string>Default.png</string>
+				<string>Default@2x.png</string>
 			</array>
 		</dict>
 	</dict>
